--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -8,3 +8,5 @@ encoding//08.PartiteAperte_OpenItems/0314/open_items.jrxml=UTF-8
 encoding//08.PartiteAperte_OpenItems/821/customerstatement821.jrxml=UTF-8
 encoding//08.PartiteAperte_OpenItems/OpenItems/customer_statement/customer_statement.jrxml=UTF-8
 encoding//08.PartiteAperte_OpenItems/OpenItems/customer_statement/customer_statement_sub1.jrxml=UTF-8
+encoding//821/customerstatement821.jrxml=UTF-8
+encoding//821/customerstatement_sub.jrxml=UTF-8
