Nuovo Report B Version

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -10,3 +10,4 @@ encoding//08.PartiteAperte_OpenItems/OpenItems/customer_statement/customer_state
 encoding//08.PartiteAperte_OpenItems/OpenItems/customer_statement/customer_statement_sub1.jrxml=UTF-8
 encoding//821/customerstatement821.jrxml=UTF-8
 encoding//821/customerstatement_sub.jrxml=UTF-8
+encoding//821b.EstrattoConto/customerstatement821.jrxml=UTF-8
