Convertito report a JR 6.6.0

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -12,3 +12,4 @@ encoding//821/customerstatement821.jrxml=UTF-8
 encoding//821/customerstatement_sub.jrxml=UTF-8
 encoding//821b.EstrattoConto/customerstatement821b.jrxml=UTF-8
 encoding//821b.EstrattoConto/customerstatement_sub.jrxml=UTF-8
+encoding//821c.EstrattoConto/customerstatement821c.jrxml=UTF-8
