Modificata join uom Purchase Order

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -9,3 +9,6 @@ encoding//08.PartiteAperte_OpenItems/0314/open_items.jrxml=UTF-8
 encoding//08.PartiteAperte_OpenItems/821/customerstatement821.jrxml=UTF-8
 encoding//08.PartiteAperte_OpenItems/OpenItems/customer_statement/customer_statement.jrxml=UTF-8
 encoding//08.PartiteAperte_OpenItems/OpenItems/customer_statement/customer_statement_sub1.jrxml=UTF-8
+encoding//Estratto\ Conto\ 821/customerstatement821b.jrxml=UTF-8
+encoding//Estratto\ Conto\ 821/customerstatement_sub.jrxml=UTF-8
+encoding//PurchaseOrder/c_order_po.jrxml=UTF-8
