--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -10,5 +10,6 @@ encoding//08.PartiteAperte_OpenItems/821/customerstatement821.jrxml=UTF-8
 encoding//08.PartiteAperte_OpenItems/OpenItems/customer_statement/customer_statement.jrxml=UTF-8
 encoding//08.PartiteAperte_OpenItems/OpenItems/customer_statement/customer_statement_sub1.jrxml=UTF-8
 encoding//Estratto\ Conto\ 821/customerstatement821b.jrxml=UTF-8
+encoding//Estratto\ Conto\ 821/customerstatement821b_test.jrxml=UTF-8
 encoding//Estratto\ Conto\ 821/customerstatement_sub.jrxml=UTF-8
 encoding//PurchaseOrder/c_order_po.jrxml=UTF-8
