--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -3,8 +3,10 @@ encoding//04.CicloAttivo_QuotetoInvoice/Invoice/c_invoice0042m/c_invoice0042m.jr
 encoding//04.CicloAttivo_QuotetoInvoice/OrderOffer0043/c_order.jrxml=UTF-8
 encoding//04.CicloAttivo_QuotetoInvoice/SalesOrder/c_orderlist0055/c_orderlist0055.jrxml=UTF-8
 encoding//04.CicloAttivo_QuotetoInvoice/ShipmentCustomer/m_inout0045m/m_inout0045.jrxml=UTF-8
+encoding//04.CicloAttivo_QuotetoInvoice/ShipmentCustomer/m_inout0045m/m_inout0045_old1.jrxml=UTF-8
 encoding//04.CicloAttivo_QuotetoInvoice/ShipmentCustomer/m_inout0045m/m_inout_sub1.jrxml=UTF-8
 encoding//04.CicloAttivo_QuotetoInvoice/ShipmentCustomer/m_inout0045m/m_inout_sub2.jrxml=UTF-8
+encoding//04.CicloAttivo_QuotetoInvoice/ShipmentCustomer/m_inout0045m/m_inout_vat.jrxml=UTF-8
 encoding//08.PartiteAperte_OpenItems/0314/open_items.jrxml=UTF-8
 encoding//08.PartiteAperte_OpenItems/821/customerstatement821.jrxml=UTF-8
 encoding//08.PartiteAperte_OpenItems/OpenItems/customer_statement/customer_statement.jrxml=UTF-8
@@ -15,5 +17,4 @@ encoding//Estratto\ Conto\ 822_conologico/customerstatement821b.jrxml=UTF-8
 encoding//Estratto\ Conto\ 822_conologico/customerstatement_sub.jrxml=UTF-8
 encoding//OLD/821b.EstrattoConto\ -\ Copia/customerstatement821b.jrxml=UTF-8
 encoding//PurchaseOrder/c_order_po.jrxml=UTF-8
-encoding/customerstatement821b.jrxml=UTF-8
-encoding/customerstatement821b_1.jrxml=UTF-8
+encoding/m_inout_sub2.jrxml=UTF-8
