New ddt completo

--- a/.project
+++ b/.project
@@ -10,37 +10,37 @@
 	</natures>
 	<linkedResources>
 		<link>
-			<name>customerstatement821b.jasper</name>
+			<name>OLD/customerstatement821b.jasper</name>
 			<type>1</type>
 			<location>D:/Users/Andrea/Desktop/customerstatement821b.jasper</location>
 		</link>
 		<link>
-			<name>customerstatement821b_1.jasper</name>
+			<name>OLD/customerstatement821b_1.jasper</name>
 			<type>1</type>
 			<location>D:/Users/Andrea/Desktop/customerstatement821b.jasper</location>
 		</link>
 		<link>
-			<name>customerstatement_sub.jasper</name>
+			<name>OLD/customerstatement_sub.jasper</name>
 			<type>1</type>
 			<location>D:/Users/Andrea/Desktop/customerstatement_sub.jasper</location>
 		</link>
 		<link>
-			<name>m_inout_sub1.jasper</name>
+			<name>OLD/m_inout_sub1.jasper</name>
 			<type>1</type>
 			<location>D:/Users/Andrea/Desktop/m_inout_sub1.jasper</location>
 		</link>
 		<link>
-			<name>m_inout_sub2_1.jasper</name>
+			<name>OLD/m_inout_sub2_1.jasper</name>
 			<type>1</type>
 			<location>D:/Users/Andrea/Desktop/m_inout_sub2.jasper</location>
 		</link>
 		<link>
-			<name>m_inout_sub2_2.jasper</name>
+			<name>OLD/m_inout_sub2_2.jasper</name>
 			<type>1</type>
 			<location>D:/Users/Andrea/Desktop/m_inout_sub2.jasper</location>
 		</link>
 		<link>
-			<name>m_inout_sub2_3.jasper</name>
+			<name>OLD/m_inout_sub2_3.jasper</name>
 			<type>1</type>
 			<location>D:/idempiere-reports/04.CicloAttivo_QuotetoInvoice/ShipmentCustomer/m_inout0045m/m_inout_sub2.jasper</location>
 		</link>
