fattura multilang 2020 new

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
+encoding//04.CicloAttivo_QuotetoInvoice/Invoice/c_invoice0042m\ 2020/c_invoice0042m.jrxml=UTF-8
 encoding//04.CicloAttivo_QuotetoInvoice/Invoice/c_invoice0042m/c_invoice0042m.jrxml=UTF-8
 encoding//04.CicloAttivo_QuotetoInvoice/OrderOffer0043/c_order.jrxml=UTF-8
 encoding//04.CicloAttivo_QuotetoInvoice/SalesOrder/c_orderlist0055/c_orderlist0055.jrxml=UTF-8
