--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -5,6 +5,9 @@ encoding//04.CicloAttivo_QuotetoInvoice/Invoice/c_invoice0042m\ 2020/c_invoice_w
 encoding//04.CicloAttivo_QuotetoInvoice/Invoice/c_invoice0042m/c_invoice0042m.jrxml=UTF-8
 encoding//04.CicloAttivo_QuotetoInvoice/OrderOffer0043/c_order.jrxml=UTF-8
 encoding//04.CicloAttivo_QuotetoInvoice/SalesOrder/c_orderlist0055/c_orderlist0055.jrxml=UTF-8
+encoding//04.CicloAttivo_QuotetoInvoice/ShipmentCustomer/m_inout0045m\ -\ new2020/m_inout0045.jrxml=UTF-8
+encoding//04.CicloAttivo_QuotetoInvoice/ShipmentCustomer/m_inout0045m\ -\ new2020/m_inout_sub1.jrxml=UTF-8
+encoding//04.CicloAttivo_QuotetoInvoice/ShipmentCustomer/m_inout0045m\ -\ new2020/m_inout_sub2.jrxml=UTF-8
 encoding//04.CicloAttivo_QuotetoInvoice/ShipmentCustomer/m_inout0045m/m_inout0045.jrxml=UTF-8
 encoding//04.CicloAttivo_QuotetoInvoice/ShipmentCustomer/m_inout0045m/m_inout0045_old1.jrxml=UTF-8
 encoding//04.CicloAttivo_QuotetoInvoice/ShipmentCustomer/m_inout0045m/m_inout_sub1.jrxml=UTF-8
