--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -9,6 +9,7 @@ encoding//04.CicloAttivo_QuotetoInvoice/SalesOrder/c_orderlist0055/c_orderlist00
 encoding//04.CicloAttivo_QuotetoInvoice/ShipmentCustomer/m_inout0045m\ -\ new2020/m_inout0045.jrxml=UTF-8
 encoding//04.CicloAttivo_QuotetoInvoice/ShipmentCustomer/m_inout0045m\ -\ new2020/m_inout_sub1.jrxml=UTF-8
 encoding//04.CicloAttivo_QuotetoInvoice/ShipmentCustomer/m_inout0045m\ -\ new2020/m_inout_sub2.jrxml=UTF-8
+encoding//04.CicloAttivo_QuotetoInvoice/ShipmentCustomer/m_inout0045m\ -\ new2020/m_inout_vat.jrxml=UTF-8
 encoding//04.CicloAttivo_QuotetoInvoice/ShipmentCustomer/m_inout0045m/m_inout0045.jrxml=UTF-8
 encoding//04.CicloAttivo_QuotetoInvoice/ShipmentCustomer/m_inout0045m/m_inout0045_old1.jrxml=UTF-8
 encoding//04.CicloAttivo_QuotetoInvoice/ShipmentCustomer/m_inout0045m/m_inout_sub1.jrxml=UTF-8
