--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -19,6 +19,7 @@ encoding//04.CicloAttivo_QuotetoInvoice/ShipmentCustomer/m_inout0045m_2020_2/lit
 encoding//04.CicloAttivo_QuotetoInvoice/ShipmentCustomer/m_inout0045m_2020_2/m_inout0045.jrxml=UTF-8
 encoding//04.CicloAttivo_QuotetoInvoice/ShipmentCustomer/m_inout0045m_2020_2/m_inout_sub1.jrxml=UTF-8
 encoding//04.CicloAttivo_QuotetoInvoice/ShipmentCustomer/m_inout0045m_2020_2/m_inout_sub2.jrxml=UTF-8
+encoding//04.CicloAttivo_QuotetoInvoice/ShipmentCustomer/m_inout0045m_2020_2/m_inout_vat.jrxml=UTF-8
 encoding//08.PartiteAperte_OpenItems/0314/open_items.jrxml=UTF-8
 encoding//08.PartiteAperte_OpenItems/821/customerstatement821.jrxml=UTF-8
 encoding//08.PartiteAperte_OpenItems/OpenItems/customer_statement/customer_statement.jrxml=UTF-8
