--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -3,6 +3,8 @@ encoding//04.CicloAttivo_QuotetoInvoice/Invoice/c_invoice0042m\ 2020/c_invoice00
 encoding//04.CicloAttivo_QuotetoInvoice/Invoice/c_invoice0042m\ 2020/c_invoice_withholding_sub_payschedule.jrxml=UTF-8
 encoding//04.CicloAttivo_QuotetoInvoice/Invoice/c_invoice0042m\ 2020/c_invoice_withholding_sub_vat.jrxml=UTF-8
 encoding//04.CicloAttivo_QuotetoInvoice/Invoice/c_invoice0042m/c_invoice0042m.jrxml=UTF-8
+encoding//04.CicloAttivo_QuotetoInvoice/Order-offer/0043\ -\ 2020.1/c_order.jrxml=UTF-8
+encoding//04.CicloAttivo_QuotetoInvoice/Order-offer/0043\ -\ 2020.1/c_order_line.jrxml=UTF-8
 encoding//04.CicloAttivo_QuotetoInvoice/Order-offer/0043\ -\ 2020/c_order.jrxml=UTF-8
 encoding//04.CicloAttivo_QuotetoInvoice/OrderOffer0043/c_order.jrxml=UTF-8
 encoding//04.CicloAttivo_QuotetoInvoice/SalesOrder/c_orderlist0055/c_orderlist0055.jrxml=UTF-8
